--- a/application/templates/header.html
+++ b/application/templates/header.html
@@ -17,8 +17,9 @@
     <!--<div class="collapse navbar-collapse">-->
       <ul class="nav navbar-nav navbar-left">
         <!--<li class="active"><a href="/"><i class="fa fa-flag"></i> <strong>Fieldwork France 2014</strong> <i class="fa fa-angle-right"></i> Group A</a></li>-->
-        <li class="active"><a href="/"><i class="fa fa-flag"></i> Home</a></li>
+        
         {% if current_user.id and project and user %}
+          <li class="active"><a href="/projects/{{project.slug}}/{{user.id}}/"><i class="fa fa-flag"></i> Home</a></li>
 	        <li><a href="/projects/{{project.slug}}/{{user.id}}/data"><i class="fa fa-database"></i> Data</a></li>
 	        <li><a href="/projects/{{project.slug}}/{{user.id}}/maps"><i class="fa fa-map-marker"></i> Maps</a></li>
 	        <li><a href="/projects/{{project.slug}}/{{user.id}}/feedback"><i class="fa fa-comment"></i> Feedback</a></li>
@@ -26,8 +27,10 @@
         {% endif %}
         {% if current_user.id and project and not user %}
         	<!-- a project has been selected, but no user yet -->
+          <!--
         	<li><a href="/projects/{{project.slug}}/"><i class="fa fa-file-text"></i> Project Files</a></li>
         	<li><a href="/projects/{{project.slug}}/"><i class="fa fa-user"></i> Participating Users</a></li>
+          -->
         {% endif %}
       </ul>
       {% if current_user.id %}
