--- a/application/templates/maps.html
+++ b/application/templates/maps.html
@@ -1,42 +1,219 @@
 {% extends "base.html" %}
 {% block headcss %}
     <link rel="stylesheet" href="http://openlayers.org/en/v3.0.0/css/ol.css" type="text/css">
-    <style>
-      .map {
-        height: 550px;
-        width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="/static/maps.css" type="text/css">
 {% endblock %}
-{% block headjs %}
-	<script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script>
+{% block footjs %}
+  <!--
+  The footjs template block is inserted just before the </body> tag in 
+  the HTML output.
+  -->
+  <script>
+    WMS_URL='/wmsproxy';
+    WMS_MAP='{{project.basedir}}/projectdata/map/project.qgs';
+  </script>
+  <script type="text/javascript" src="http://openlayers.org/en/v3.0.0/build/ol.js"></script>
+  <script type="text/javascript" src="/static/fieldworkonline.js"></script>
+  <script type="text/javascript" src="/static/maps.js"></script>
+  <script type="text/javascript">
+    function renderlayer(layer) {
+      /*
+      Recursively renders a layer in the QGIS table of contents. This function
+      is called on each layer, then evalates if that layer has any sub layers,
+      and then calls itself on all of those sub layers too. Each time it returns
+      a little bit of html code which in the end make up a nicely sorted and 
+      formatted <ul>...</ul> list with the project's layers. When the page is 
+      completely loaded (all this stuff happens before the page is fully loaded)
+      some events are attached to the .layer-visibility-toggle link classes which 
+      toggle the visibility of that specific layer.
+      */
+      var has_children=layer.hasOwnProperty('Layer')?true:false;
+      var is_folder=layer.hasOwnProperty('Style')?false:true; 
+      var is_visible=layer["@visible"]=="1"?true:false;
+      var sub_layers=layer.Layer instanceof Array?layer.Layer:[layer.Layer]
+      var html=''
+      if(is_folder) {
+        /* layer is a group layer, print a folder icon */
+        html+='<li class="list-group-item"><i class="fa fa-folder-open fa-fw"></i> '+layer.Title+'<ul class="list-group">';
+        if(has_children) {
+          for (var i in sub_layers) { /* also fails if only one sub layer */
+            html+=renderlayer(sub_layers[i]);
+          }
+        }
+        html+='</ul></li>';
+      } else {
+        /* layer is a data layer, print the layer title and add the legend url to an array */
+        legendUrl=layer.Style.LegendURL.OnlineResource["@xlink:href"]+"&LAYERTITLE=FALSE&ITEMFONTSIZE=8&BOXSPACE=1&LAYERTITLESPACE=0&SYMBOLSPACE=1"
+        window.wmsLegendGraphic[layer.Name]={url:legendUrl,title:layer.Title}
+        html+='<li class="list-group-item wms-layer '+(is_visible?'wms-layer-visible':'wms-layer-hidden')+'" data-wms-layer="'+layer.Name+'"><i class="fa fa-map-marker fa-fw"></i><a href="" class="layer-active-toggle">'+layer.Title+'</a><a href="" class="layer-visibility-toggle pull-right "><i class="fa fa-toggle-on fa-fw"></i></a><div class="layer-actions"><img src="'+legendUrl+'" /></div></li>'
+      }
+      return html
+    }
+    function setprojectsettings(data) {
+      /* 
+      This is the callback function which is called when the GetProjectSettings 
+      request is done. The data is stored in window.wmsProjectSettings and the
+      renderLayer() function is called recursively for each layer in the QGIS
+      project, each time adding an extra depth level to the layer overview on
+      the page.
+      */
+      window.wmsProjectSettings=data
+      window.wmsLegendGraphic=[]
+      maplayers=$("ul#map-layers")
+      maplegend=$("ul#map-legend")
+      /*
+      The topmost layer is the project node, we don't show this one in the web
+      interface, only layers below that level. However, because sub_layers may
+      also turn out to be a single Object (in case there is only one sub layer) 
+      rather than an array of Objects (when there are more sub layers) we force
+      it to be an Array with only one item. This makes it easier to loop over.
+      */
+      var sub_layers=data.WMS_Capabilities.Capability.Layer.Layer;
+      sub_layers=sub_layers instanceof Array?sub_layers:[sub_layers];
+      for (var i in sub_layers) {
+        maplayers.append(renderlayer(sub_layers[i]))
+      }
+      for (var i in window.wmsLegendGraphic) {
+        maplegend.append('<li class="list-group-item" style="padding:5px;padding-left:17px;"><strong>'+window.wmsLegendGraphic[i].title+'</strong><br /><img src="'+window.wmsLegendGraphic[i].url+'" /></li>')
+      }
+    }
+    function getVisibleWmsLayers() {
+      /*
+      Returns a comma-joined string of the visible wms layers which can be used
+      in updating the wms getmap request. It only checks elements with the 
+      "wms-layer" class and uses the "data-wms-layer" attribute of that element
+      (if it is visible) to make the list of wms layer names. The list is then
+      reversed and joined to ensure it is layered properly.
+      */
+      visible_wms_layers=[]
+      $(".wms-layer").each(function(){
+        layer=$(this)
+        if (layer.hasClass("wms-layer-visible")) {
+          visible_wms_layers.push(layer.data("wms-layer"))
+        }
+      })
+      return visible_wms_layers.reverse().join()
+    }
+  </script>
+  <!--
+    Load the GetProjectSettings request from our custom WMS proxy. The proxy
+    translates the request from the XML returned by QGIS server to JSON and 
+    wraps the response in a callback to the function defined in the JSONP
+    request variable. This saves us a whole lot of XML parsing on the client
+    side and lets us loop through a JSON variable rather than an XML response.
+    Other WMS servers obviously do not support these types of requests, but 
+    for our purposes it should work just fine.
+  -->
+  <script type="text/javascript" src="/wmsproxy?SERVICE=WMS&amp;VERSION=1.3&amp;REQUEST=GetProjectSettings&amp;MAP={{project.basedir}}/projectdata/map/project.qgs&amp;FORMAT=application/json&amp;JSONP=setprojectsettings"></script>
 {% endblock %}
 
 {% block maps %}
-    <div id="map" class="map"></div>
-    <script type="text/javascript">
-      var map = new ol.Map({
-        target: 'map',
-        layers: [
-          new ol.layer.Tile({
-            source: new ol.source.MapQuest({layer: 'sat'})
-          }),
-		  new ol.layer.Image({
-		    //extent: [-13884991, 2870341, -7455066, 6338219],
-		    source: new ol.source.ImageWMS({
-		      url: 'http://qgis-web-client.localhost/cgi-bin/qgis_mapserv.fcgi',
-		      params: {
-		      	'LAYERS': 'worldbound,g2c_002',
-		      	'map':'/var/qgis-web-client/projects/testproject.qgs'
-		      }/*,
-		      serverType: 'geoserver'*/
-		    })
-		  })
-        ],
-        view: new ol.View({
-          center: [-10997148, 4569099], /*ol.proj.transform([37.41, 8.82], 'EPSG:4326', 'EPSG:3857'),*/
-          zoom: 4
-        })
-      });
-    </script>
+    
+
+    <div class="container-fluid">
+        <div class="row" style="background-color:#fff;">
+          <div class="col-md-3 col-sm-3">
+          <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <i class="fa fa-fw fa-bars"></i> 
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><strong>Layers</strong></a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse in" >
+
+                <ul class="list-group" id="map-layers">
+                  <!-- this list is filled dynamically from the GetProjectSettings WMS request. -->
+                </ul>
+
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <i class="fa fa-fw fa-bars"></i> 
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><strong>Legend</strong></a>
+                </h4>
+              </div>
+              <div id="collapseTwo" class="panel-collapse collapse">
+                <ul class="list-group" id="map-legend" style="max-height:350px;overflow-y:scroll;">
+
+                </ul>
+
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <i class="fa fa-fw fa-bars"></i> 
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour"><strong>Background</strong></a>
+                </h4>
+              </div>
+              <div id="collapseFour" class="panel-collapse collapse">
+                <ul class="list-group">
+                  <li class="list-group-item"><i class="fa fa-delicious fa-fw"></i> <a href="#">Bing Maps</a></li>
+                  <li class="list-group-item"><i class="fa fa-th fa-fw"></i> <a href="#">OpenStreetMap (MapQuest)</a></li>
+                  <li class="list-group-item"><i class="fa fa-th fa-fw"></i> <a href="#">Google Maps</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <i class="fa fa-fw fa-bars"></i> 
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix"><strong>Attribute Values</strong></a>
+                </h4>
+              </div>
+              <div id="collapseSix" class="panel-collapse collapse">
+                <ul class="list-group" id="attribute-values">
+                  <li class="list-group-item"><i class="fa fa-delicious fa-fw"></i> <a href="#">Bing Maps</a></li>
+                  <li class="list-group-item"><i class="fa fa-th fa-fw"></i> <a href="#">OpenStreetMap (MapQuest)</a></li>
+                  
+                  
+                </ul>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <i class="fa fa-fw fa-bars"></i> 
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive"><strong>Settings</strong></a>
+                </h4>
+              </div>
+              <div id="collapseFive" class="panel-collapse collapse">
+                <div class="list-group">
+                  <a href="#" class="list-group-item">
+                    <h4 class="list-group-item-heading">List group item heading</h4>
+                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                  </a>
+                </div>
+                <div class="list-group">
+                  <a href="#" class="list-group-item active">
+                    <h4 class="list-group-item-heading">List group item heading</h4>
+                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                  </a>
+                </div>
+                <div class="list-group">
+                  <a href="#" class="list-group-item">
+                    <h4 class="list-group-item-heading">List group item heading</h4>
+                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+          <div class="col-md-9 col-sm-9" style="padding-right:0px;padding-left:0;">
+
+            <div id="map" class="map">
+              
+              <div id="popup" class="ol-popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
+              </div>
+            </div>
+          </div>
+    </div>
+
 {% endblock %}
