--- a/application/templates/project-userlist.html
+++ b/application/templates/project-userlist.html
@@ -1,48 +1,58 @@
 {% extends "base.html" %}
+{% block footjs %}
+	<script>
+	$(function () {
+	  $('[data-toggle="tooltip"]').tooltip()
+	})
+	</script>
+{% endblock %}
 {% block content %}
-	<div class="row" style="margin-top:15px;">
-		<div class="col-md-12 col-sm-12" style="text-align:center;">
-			<h2>Project: {{project.name}}</h2>
-			<p>{{project.description}}</p>
-		</div>
-	</div>
+<div class="well"  style="margin-top:15px;">
+	<h2 style="margin-top:10px;">{{project.name}}</h2>
+	<p>
+	{{project.description}}
+	</p>
+</div>
 	<div class="row">
 		<div class="col-md-7 col-sm-7">
 
 			<div class="panel panel-default">
-				<div class="panel-heading"><strong>Fieldwork Participants</strong></div>
+				<div class="panel-heading"><strong>Users already participating in this fieldwork project</strong></div>
 				<div class="panel-body">
-
-			<p>
-			The following users are also participating in this project.
-			</p>
+					<p>
+					The following users are participating in this project.
+					</p>
+				</div>
+				<div class="panel-body" style="padding:0;">
 			
 			<table class="table table-condensed">
 			<thead>
-			<tr><th>Name</th><th>E-mail</th><th>Roles</th></tr>
+			<tr><th>Username</th><th>Full name</th><th>E-mail</th><th></th></tr>
 			</thead>
 			<tbody>
 			{% for user in users %}
 			<tr>
-				{% if user.is_student %}
-					<td>
-						<a href="/projects/{{project.slug}}/{{user.id}}/">{{user.fullname}}</a>
-					</td>
-				{% else %}
-					<td>{{user.fullname}}</td>
-				{% endif %}
-				<td>{{user.email}}</td><td>
-		{% for role in user.roles %}
-			{% if role.name=="student" %}
-			<!--
-				<span class="label label-default" style="background-color:#666;">{{role.name}}</span>
-			-->
-			{% else %}
-				<span class="label label-primary">{{role.name}}</span>
-			{% endif %}
-		
-		{% endfor %}
-			</td></tr>
+				<td><code>{{user.username}}</code></td>
+				<td>
+					{{user.fullname}}
+						{% if user.is_supervisor or user.is_admin %}
+							<i data-original-title="This user is a supervisor or administrator" data-toggle="tooltip" title="" class="fa fa-graduation-cap"></i>
+						{% endif %}
+				</td>
+				<td>
+					{{user.email}}
+				</td>
+				<td style="text-align:right;">
+					{% for role in user.roles %}
+						{% if role.name=="student" %}
+						{% else %}
+						{% endif %}
+					{% endfor %}
+					{% if user.is_student %}
+					<a class="btn btn-primary btn-xs" href="/projects/{{project.slug}}/{{user.id}}/maps">View maps <i class="fa fa-search"></i></a>
+					{% endif %}
+				</td>
+			</tr>
 			{% endfor %}
 			</tbody>
 			</table>
@@ -53,22 +63,60 @@
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<strong>{{project.name}} Study Area</strong> <a href="#" class="pull-right">View Project Basemap</a>
+					<strong>Enroll new users</strong> <!--<a href="#" class="pull-right">View Project Basemap</a>-->
 				</div>
 				<div class="panel-body">
-				[map here]
+				<p>
+					The invitation key/password for this project is <code>{{project.invite_key}}</code>. When students sign up and enter this key they will be automatically enrolled in this fieldwork campaign.
+					It is also possible to manually enroll users. Below is a list of users which are not enrolled in this project. You can quickly enroll them by clicking the 'enroll' button.
+				</p>
+
 				</div>
+				<div class="panel-body" style="padding:0;">
+<table class="table table-condensed">
+			<thead>
+			<tr><th>Username</th><th>Full name</th><th>E-mail</th><th></th></tr>
+			</thead>
+			<tbody>
+			{% for user in enrollable_users %}
+			<tr>
+				<td><code>{{user.username}}</code></td>
+				<td>
+					{{user.fullname}}
+						{% if user.is_supervisor or user.is_admin %}
+							<i data-original-title="This user is a supervisor or administrator" data-toggle="tooltip" title="" class="fa fa-graduation-cap"></i>
+						{% endif %}
+				</td>
+				<td>
+					{{user.email}}
+				</td>
+				<td style="text-align:right;">
+					<a class="btn btn-primary btn-xs" href="/projects/{{project.slug}}/{{user.id}}/enroll"><i class="fa fa-plus"></i> Enroll</a>
+				</td>
+			</tr>
+			{% endfor %}
+			</tbody>
+			</table>
+				</div>
+			
 			</div>
 		</div>
 		<div class="col-md-5 col-sm-5">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<strong>Project Base Map</strong> <a href="#" class="pull-right">View Project Basemap</a>
+					<strong>Upload new base map files</strong>
 				</div>
 				<div class="panel-body">
-				[map here]
+					<form role="form" action="map" method="post" enctype="multipart/form-data">
+					<div class="form-group">
+						<input type="file" name="uploadfile">
+					</div>
+					<button type="submit" class="btn btn-default btn-xs">Upload file <i class="fa fa-long-arrow-right"></i></button>
+					<button type="submit" class="btn btn-default btn-xs">Clear all uploads <i class="fa fa-times"></i>
+					</form>
 				</div>
 			</div>
+
 			{% if current_user.is_student %}
 			<div class="panel panel-default">
 				<div class="panel-heading">
