--- a/application/templates/upload.html
+++ b/application/templates/upload.html
@@ -1,7 +1,55 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Upload measurements, geodata, or photos...</h2>
-<p>
-Current user: {{ current_user.username or current_user.email }}
-</p>
+<!--
+<div class="well"  style="margin-top:15px;">
+	<h2 style="margin:0;">Overview of fieldwork data</h2>
+</div>
+-->
+<div class="panel panel-default" style="margin-top:15px;">
+	<div class="panel-heading">
+		<strong>Upload new files (spreadsheets, attachments)</strong>
+	</div>
+	<div class="panel-body">
+		<form role="form" action="" method=post enctype="multipart/form-data">
+		<div class="form-group">
+			<input type="file" name="uploadfile">
+		</div>
+		<button type="submit" class="btn btn-primary btn-sm">Upload file <i class="fa fa-long-arrow-right"></i></button>
+		</form>
+	</div>
+</div>
+
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<strong>Overview of uploaded files</strong>
+	</div>
+	<div class="panel-body" style="padding:0;">
+		<table class="table">
+		<tr>
+			<td style="border:0;padding-left:15px;">Filename</td>
+			<td style="border:0">Type</td>
+			<td style="border:0">Size</td>
+		</tr>
+		
+		{% for file in attachments %}
+		<tr>
+			<td style="padding-left:15px;">
+			{% if file["type"] == "image" %}
+			<i class="fa fa-file-image-o"></i>
+			{% elif file["type"] == "spreadsheet" %}
+			<i class="fa fa-file-excel-o"></i>
+			{% elif file["type"] == "document" %}
+			<i class="fa fa-file-text-o"></i>
+			{% else %}
+			<i class="fa fa-file-o"></i> 
+			{% endif %}
+
+			<a href="?filename={{file["name"]}}">{{file["name"]}}</a></td>
+			<td>{{file["type"]}}</td>
+			<td>{{file["size"]}}</td>
+		</tr>
+		{% endfor %}
+		</table>
+	</div>
+</div>
 {% endblock %}
