--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -41,12 +41,15 @@
 		</style>
 	</head>
 	<body>
+
 		{% block statusbar %}
 			{% include "statusbar.html" %}
 		{% endblock %}
 		{% block header %}
 			{% include "header.html" %}
 		{% endblock %}
+
+		{% include "messages.html" %}
 
 		{% block maps %}
 		{% endblock %}
