--- a/application/static/maps.css
+++ b/application/static/maps.css
@@ -25,7 +25,7 @@
         margin-top:-3px;
       }
       li.wms-layer.wms-layer-visible {
-        //color:green;
+
       }
       li.wms-layer.wms-layer-hidden,
       li.wms-layer.wms-layer-hidden a {
@@ -34,8 +34,8 @@
       li.wms-layer.wms-layer-hidden a.layer-visibility-toggle i:before {
         content:"";
       }
-      li.wms-layer.wms-layer-active a.layer-visibility-toggle:before {
-        //content:"(active) "
+      li.wms-layer.wms-layer-hidden a.zoom-to-extent {
+        display:none;
       }
 
       li.wms-layer.wms-layer-active a.layer-active-toggle {
@@ -128,4 +128,18 @@
       }
       .ol-popup-closer:after {
         content: "✖";
+      }
+
+      a.zoom-to-extent {
+        color:#ccc;
+      }
+      a.layer-visibility-toggle {
+        text-decoration:none;
+      }
+      a#zoom-to-project-extent {
+        color:#ccc;
+        text-decoration:none;
+      }
+      a#zoom-to-project-extent:hover {
+        color:#666;
       }
