--- a/application/templates/admin.html
+++ b/application/templates/admin.html
@@ -4,18 +4,24 @@
 Administration panel	
 {% endblock %}
 {% block content %}
+
+<ul>
+{% for message in messages %}
+<li>{{message}}</li>
+{% endfor %}
+</ul>
 <div class="panel panel-default" style="margin-top:15px;">
 	<div class="panel-heading">
 		<strong>List of fieldwork projects</strong>
 	</div>
 	<div class="panel-body" style="padding:0;padding-top:10px;">
-		<table class="table table-condensed">
+		<table class="table">
 		<thead>
-		<tr><th>ID</th><th>Name</th><th>Description</th><th>Repr</th></tr>
+		<tr><th>ID</th><th>Name</th><th>Key</th><th>Url</th><th>Description</th></tr>
 		</thead>
 		<tbody>
 		{% for campaign in campaigns %}
-		<tr><td>{{campaign.id}}</td><td>{{campaign.name}}</td><td>{{campaign.description}}</td><td>{{campaign}}</td></tr>
+		<tr><td>{{campaign.id}}</td><td><nobr>{{campaign.name}}</nobr></td><td><code>{{campaign.invite_key}}</code></td><td><a href="/projects/{{campaign.slug}}/"><nobr>/projects/{{campaign.slug}}</nobr></a></td><td>{{campaign.description}}</td></tr>
 		{% endfor %}
 		</tbody>
 		</table>
@@ -27,14 +33,17 @@ Administration panel
 		<strong>Add new fieldwork project</strong>
 	</div>
 	<div class="panel-body">
-		<form role="form" action="" method=post enctype="multipart/form-data">
-		<div class="form-group">
-			<input type="text" name="project_name">
-		</div>
-		<div class="form-group">
-			<input type="file" name="uploadfile">
-		</div>
-		<button type="submit" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i> Create new fieldwork project</button>
+		<form role="form" action="" method="post" enctype="multipart/form-data">
+			<input type="hidden" name="action" value="project_create" />
+			<div class="form-group">
+				<label for="project-name">Project Name</label>
+				<input type="text" name="project_name" class="form-control" id="project-name" placeholder="Enter a name for this fieldwork project">
+			</div>
+			<div class="form-group">
+				<label for="project-description">Project Description</label>
+				<textarea name="project_description" class="form-control" id="project-description" placeholder="Enter a short description for this fieldwork project"></textarea>
+			</div>
+			<button type="submit" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i> Create new fieldwork project</button>
 		</form>
 	</div>
 </div>
