--- a/application/templates/project-map.html
+++ b/application/templates/project-map.html
@@ -111,7 +111,7 @@
 					<strong>Upload new base map files</strong>
 				</div>
 				<div class="panel-body">
-					<form role="form" action="" method="post" enctype="multipart/form-data">
+					<form role="form" action="map" method="post" enctype="multipart/form-data">
 					<div class="form-group">
 						<input type="file" name="uploadfile">
 					</div>
